# Fourier-Hierarchical-VQC

./: .gitignore  README.md  pyproject.toml  results_synth.csv  summary_synth.json
src/hql.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/hql/analysis/: plots.py  trap_density.py
src/hql/experiments/: exp_synth_one_figure.py
src/hql/hierarchy/: init_phase_align.py  schedule.py
src/hql/objectives/: base.py  synthetic_fourier.py
src/hql/optim/: dhfc.py  group_samplers.py  lr.py  sgho.py
src/hql/smoothing/: gaussian.py
src/hql/utils/: math.py
tests/: test_synthetic_objective.py
