[build-system]
requires = ["setuptools==75.6.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "hql"
version = "0.1.0"
description = "Hierarchical Quantum Learning: DHFC/SGHO with phase-aligned bias correction"
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
  "numpy==2.4.0",
  "scipy==1.16.3",
  "pandas==2.3.3",
  "matplotlib==3.10.8",
  "PyYAML==6.0.3",
  "tqdm==4.67.1",
]

[project.optional-dependencies]
ml = [
  "torch==2.9.1",
  "scikit-learn==1.8.0",
]
pennylane = [
  "pennylane==0.43.2",
]
lightning = [
  "pennylane-lightning==0.43.0",
]
qiskit = [
  "qiskit==2.2.3",
  "qiskit-aer==0.17.2",
  "qiskit-machine-learning==0.9.0",
]
dev = [
  "pytest==9.0.2",
  "ruff==0.14.10",
  "mypy==1.19.1",
  "black==25.12.0",
]

[project.scripts]
hql-synth = "hql.experiments.exp_synth_one_figure:main"
hql-plot  = "hql.analysis.plots:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["hql*"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
